# gmail-mbox-analyzer

./: Cargo.toml  README.md
src/: index.html  main.rs  report.rs
